<resources>
    <string name="app_name">AndroidHomeWork</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="details">Details</string>
    <string name="image_view_clicked">ImageView clicked</string>
    <string name="m4a1">m4a1</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="login">Login</string>
    <string name="fields_is_empty">fields is empty</string>
    <string name="next_page">next page</string>
    <string name="logout">logout</string>
    <string name="name">name</string>
    <string name="username">username</string>
    <string name="address">address</string>
    <string name="zipcode">zipcode</string>
    <string name="geo">geo</string>
    <string name="phone">phone</string>
    <string name="website">website</string>
    <string name="company">company</string>
    <string name="e_mail_items">e_mail_items</string>
    <string name="catchphrase">catchphrase</string>
    <string name="business">business</string>
    <string name="onboarding_fragment">onBoarding fragment</string>
    <string name="items_fragment">items fragment</string>
    <string name="favorites_fragment">favorites Fragment</string>
    <string name="home_fragment">home fragment</string>
</resources>